@@ -1,7 +1,13 @@
 2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_font.*, 
+	* gameswf/gameswf_freetype.cpp:
+	The basic work with dynamic fonts is completed
+
+2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_font.cpp: 
-	* gameswf/gameswf_freetype.*: added handler of bold & italic (dynamic fonts)
+	* gameswf/gameswf_freetype.*: added handler of bold & italic styles (dynamic fonts)
 	* gameswf/plugins/lib3ds/gameswf_3ds.cpp: fixed compiler warning
 
 2007-06-07  Vitaly Alexeev <tishka92@yahoo.com>
